compilateurDeca/src/test/deca/syntax/valid/sans_objet/read.deca

// Description:
//
//Teste readInt, readFloat et l'affectaton
// Historique:09/01/2026
{
    int x;
    float z; 
    x= readInt();
    z= readFloat();
}
